@@ -382,7 +382,7 @@ InitVideo(FCEUGI *gi)
 				gtk_main_iteration_do(FALSE);
         
 			char SDL_windowhack[128];
-			sprintf(SDL_windowhack, "SDL_WINDOWID=%u", (unsigned int)GDK_WINDOW_XWINDOW(gtk_widget_get_window(evbox)));
+			sprintf(SDL_windowhack, "SDL_WINDOWID=%u", (unsigned int)GDK_WINDOW_XID(gtk_widget_get_window(evbox)));
 			SDL_putenv(SDL_windowhack);
         
 			// init SDL video
